Chore: actualize slf4j-simple version